--- a/src/main/resources/hi/is/vidmot/veganifel/main-view.fxml
+++ b/src/main/resources/hi/is/vidmot/veganifel/main-view.fxml
@@ -1,14 +1,131 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="$CONTROLLER_NAME$"
-            prefHeight="400.0" prefWidth="600.0" >
-
-</AnchorPane>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="506.0" prefWidth="833.0" stylesheets="@main.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+   <top>
+      <MenuBar prefWidth="591.0" BorderPane.alignment="CENTER">
+        <menus>
+          <Menu mnemonicParsing="false" text="Hjálp">
+            <items>
+              <MenuItem mnemonicParsing="false" text="Close" />
+            </items>
+          </Menu>
+          <Menu mnemonicParsing="false" text="Edit">
+            <items>
+              <MenuItem mnemonicParsing="false" text="Delete" />
+            </items>
+          </Menu>
+        </menus>
+      </MenuBar>
+   </top>
+   <center>
+      <VBox prefHeight="481.0" prefWidth="690.0" BorderPane.alignment="CENTER">
+         <children>
+            <HBox alignment="CENTER" prefHeight="111.0" prefWidth="493.0" style="-fx-padding: 15;">
+               <children>
+                  <Label prefHeight="42.0" prefWidth="210.0" text="Nafn er Verkefnastjóri. Nafn velur " />
+                  <ChoiceBox prefHeight="29.0" prefWidth="103.0" />
+                  <Label prefHeight="28.0" prefWidth="147.0" text="  sem ritara." />
+               </children>
+            </HBox>
+            <Pane prefHeight="364.0" prefWidth="658.0" style="-fx-border-width: 12;">
+               <children>
+                  <GridPane fx:id="bord" alignment="BOTTOM_CENTER" gridLinesVisible="true" layoutY="77.0" prefHeight="288.0" prefWidth="627.0">
+                    <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                  </GridPane>
+               </children>
+            </Pane>
+         </children>
+      </VBox>
+   </center>
+   <right>
+      <VBox fx:id="Vote" alignment="CENTER" prefHeight="481.0" prefWidth="186.0" style="-fx-padding: 10; -fx-border-color: Black; -fx-border-width: 5; -fx-background-color: White;" BorderPane.alignment="CENTER">
+         <children>
+            <Label alignment="CENTER" prefHeight="31.0" prefWidth="161.0" text="Treysti þið þeim í verkefnið?" />
+            <Label fx:id="L1" text="Leikmaður 1" />
+            <HBox alignment="CENTER" prefHeight="28.0" prefWidth="168.0">
+               <children>
+                  <Button fx:id="Ja" mnemonicParsing="false" text="Já" />
+                  <Button fx:id="Nei" mnemonicParsing="false" text="Nei" />
+               </children>
+            </HBox>
+            <Label fx:id="L2" text="Leikmaður 2" />
+            <HBox alignment="CENTER" prefHeight="26.0" prefWidth="168.0">
+               <children>
+                  <Button fx:id="Ja" mnemonicParsing="false" text="Já" />
+                  <Button fx:id="Nei" mnemonicParsing="false" text="Nei" />
+               </children>
+            </HBox>
+            <Label fx:id="L3" text="Leikmaður 3" />
+            <HBox alignment="CENTER" prefHeight="27.0" prefWidth="168.0">
+               <children>
+                  <Button fx:id="Ja" mnemonicParsing="false" text="Já" />
+                  <Button fx:id="Nei" mnemonicParsing="false" text="Nei" />
+               </children>
+            </HBox>
+            <Label fx:id="L4" text="Leikmaður 4" />
+            <HBox alignment="CENTER" prefHeight="26.0" prefWidth="168.0">
+               <children>
+                  <Button fx:id="Ja" mnemonicParsing="false" text="Já" />
+                  <Button fx:id="Nei" mnemonicParsing="false" text="Nei" />
+               </children>
+            </HBox>
+            <Label fx:id="L5" text="Leikmaður 5" />
+            <HBox alignment="CENTER" prefHeight="27.0" prefWidth="168.0">
+               <children>
+                  <Button fx:id="Ja" mnemonicParsing="false" text="Já" />
+                  <Button fx:id="Nei" mnemonicParsing="false" text="Nei" />
+               </children>
+            </HBox>
+            <Label fx:id="L6" text="Leikmaður 6" />
+            <HBox alignment="CENTER" prefHeight="27.0" prefWidth="168.0">
+               <children>
+                  <Button fx:id="Ja" mnemonicParsing="false" text="Já" />
+                  <Button fx:id="Nei" mnemonicParsing="false" text="Nei" />
+               </children>
+            </HBox>
+            <Label fx:id="L7" text="Leikmaður 7" />
+            <HBox alignment="CENTER" prefHeight="26.0" prefWidth="168.0">
+               <children>
+                  <Button fx:id="Ja" mnemonicParsing="false" text="Já" />
+                  <Button fx:id="Nei" mnemonicParsing="false" text="Nei" />
+               </children>
+            </HBox>
+            <Label fx:id="L8" text="Leikmaður 8" />
+            <HBox alignment="CENTER" prefHeight="27.0" prefWidth="168.0">
+               <children>
+                  <Button fx:id="Ja" mnemonicParsing="false" text="Já" />
+                  <Button fx:id="Nei" mnemonicParsing="false" text="Nei" />
+               </children>
+            </HBox>
+            <Button fx:id="Draga" mnemonicParsing="false" prefHeight="51.0" prefWidth="167.0" text="Draga Spil" />
+         </children>
+      </VBox>
+   </right>
+</BorderPane>
