--- a/src/main/resources/hi/is/vidmot/veganifel/main-view.fxml
+++ b/src/main/resources/hi/is/vidmot/veganifel/main-view.fxml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -13,8 +15,9 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="506.0" prefWidth="833.0" stylesheets="@main.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="595.0" prefWidth="867.0" stylesheets="@main.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <top>
       <MenuBar prefWidth="591.0" BorderPane.alignment="CENTER">
         <menus>
@@ -32,18 +35,30 @@
       </MenuBar>
    </top>
    <center>
-      <VBox prefHeight="481.0" prefWidth="690.0" BorderPane.alignment="CENTER">
+      <VBox prefHeight="481.0" prefWidth="690.0" style="-fx-padding: 5;" BorderPane.alignment="CENTER">
          <children>
-            <HBox alignment="CENTER" prefHeight="111.0" prefWidth="493.0" style="-fx-padding: 15;">
+            <AnchorPane prefHeight="200.0" prefWidth="200.0">
                <children>
-                  <Label prefHeight="42.0" prefWidth="210.0" text="Nafn er Verkefnastjóri. Nafn velur " />
-                  <ChoiceBox prefHeight="29.0" prefWidth="103.0" />
-                  <Label prefHeight="28.0" prefWidth="147.0" text="  sem ritara." />
+                  <HBox fx:id="TextBox" alignment="CENTER" layoutX="44.0" layoutY="40.0" prefHeight="71.0" prefWidth="540.0" style="-fx-border-radius: 15; -fx-border-color: Black; -fx-border-width: 3; -fx-background-color: #DFE6E9; -fx-background-radius: 16;">
+                     <children>
+                        <Label prefHeight="42.0" prefWidth="276.0" text="Nafn er Verkefnastjóri. Nafn velur ">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Label>
+                        <ChoiceBox prefHeight="29.0" prefWidth="103.0" />
+                        <Label prefHeight="28.0" prefWidth="108.0" text="  sem ritara.">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </HBox>
                </children>
-            </HBox>
-            <Pane prefHeight="364.0" prefWidth="658.0" style="-fx-border-width: 12;">
+            </AnchorPane>
+            <Pane prefHeight="339.0" prefWidth="627.0" style="-fx-border-width: 12;">
                <children>
-                  <GridPane fx:id="bord" alignment="BOTTOM_CENTER" gridLinesVisible="true" layoutY="77.0" prefHeight="288.0" prefWidth="627.0">
+                  <GridPane fx:id="bord" alignment="BOTTOM_CENTER" gridLinesVisible="true" layoutY="25.0" prefHeight="288.0" prefWidth="627.0" style="-fx-background-color: #DFE6E9; -fx-border-color: Black; -fx-border-radius: 2; -fx-background-radius: 3;">
                     <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -62,70 +77,157 @@
                </children>
             </Pane>
          </children>
+         <BorderPane.margin>
+            <Insets bottom="5.0" left="5.0" right="5.0" />
+         </BorderPane.margin>
       </VBox>
    </center>
    <right>
-      <VBox fx:id="Vote" alignment="CENTER" prefHeight="481.0" prefWidth="186.0" style="-fx-padding: 10; -fx-border-color: Black; -fx-border-width: 5; -fx-background-color: White;" BorderPane.alignment="CENTER">
+      <VBox fx:id="Vote" alignment="CENTER" prefHeight="485.0" prefWidth="210.0" style="-fx-padding: 10; -fx-border-color: Black; -fx-border-width: 5;" BorderPane.alignment="CENTER">
          <children>
-            <Label alignment="CENTER" prefHeight="31.0" prefWidth="161.0" text="Treysti þið þeim í verkefnið?" />
-            <Label fx:id="L1" text="Leikmaður 1" />
+            <Label alignment="CENTER" prefHeight="20.0" prefWidth="179.0" text="Treysti þið þeim í verkefnið?" />
+            <Label fx:id="L1" prefWidth="76.0" text="Leikmaður 1">
+               <VBox.margin>
+                  <Insets top="3.0" />
+               </VBox.margin></Label>
             <HBox alignment="CENTER" prefHeight="28.0" prefWidth="168.0">
                <children>
-                  <Button fx:id="Ja" mnemonicParsing="false" text="Já" />
-                  <Button fx:id="Nei" mnemonicParsing="false" text="Nei" />
+                  <Button fx:id="Ja" mnemonicParsing="false" text="Já">
+                     <HBox.margin>
+                        <Insets right="5.0" />
+                     </HBox.margin></Button>
+                  <Button fx:id="Nei" mnemonicParsing="false" text="Nei">
+                     <HBox.margin>
+                        <Insets left="5.0" />
+                     </HBox.margin></Button>
                </children>
             </HBox>
-            <Label fx:id="L2" text="Leikmaður 2" />
+            <Label fx:id="L2" text="Leikmaður 2">
+               <VBox.margin>
+                  <Insets top="3.0" />
+               </VBox.margin></Label>
             <HBox alignment="CENTER" prefHeight="26.0" prefWidth="168.0">
                <children>
-                  <Button fx:id="Ja" mnemonicParsing="false" text="Já" />
-                  <Button fx:id="Nei" mnemonicParsing="false" text="Nei" />
+                  <Button fx:id="Ja" mnemonicParsing="false" text="Já">
+                     <HBox.margin>
+                        <Insets right="5.0" />
+                     </HBox.margin></Button>
+                  <Button fx:id="Nei" mnemonicParsing="false" text="Nei">
+                     <HBox.margin>
+                        <Insets left="5.0" />
+                     </HBox.margin></Button>
                </children>
             </HBox>
-            <Label fx:id="L3" text="Leikmaður 3" />
+            <Label fx:id="L3" text="Leikmaður 3">
+               <VBox.margin>
+                  <Insets top="3.0" />
+               </VBox.margin></Label>
             <HBox alignment="CENTER" prefHeight="27.0" prefWidth="168.0">
                <children>
-                  <Button fx:id="Ja" mnemonicParsing="false" text="Já" />
-                  <Button fx:id="Nei" mnemonicParsing="false" text="Nei" />
+                  <Button fx:id="Ja" mnemonicParsing="false" text="Já">
+                     <HBox.margin>
+                        <Insets right="5.0" />
+                     </HBox.margin></Button>
+                  <Button fx:id="Nei" mnemonicParsing="false" text="Nei">
+                     <HBox.margin>
+                        <Insets left="5.0" />
+                     </HBox.margin></Button>
                </children>
             </HBox>
-            <Label fx:id="L4" text="Leikmaður 4" />
+            <Label fx:id="L4" text="Leikmaður 4">
+               <VBox.margin>
+                  <Insets top="3.0" />
+               </VBox.margin></Label>
             <HBox alignment="CENTER" prefHeight="26.0" prefWidth="168.0">
                <children>
-                  <Button fx:id="Ja" mnemonicParsing="false" text="Já" />
-                  <Button fx:id="Nei" mnemonicParsing="false" text="Nei" />
+                  <Button fx:id="Ja" mnemonicParsing="false" text="Já">
+                     <HBox.margin>
+                        <Insets right="5.0" />
+                     </HBox.margin></Button>
+                  <Button fx:id="Nei" mnemonicParsing="false" text="Nei">
+                     <HBox.margin>
+                        <Insets left="5.0" />
+                     </HBox.margin></Button>
                </children>
             </HBox>
-            <Label fx:id="L5" text="Leikmaður 5" />
+            <Label fx:id="L5" text="Leikmaður 5">
+               <VBox.margin>
+                  <Insets top="3.0" />
+               </VBox.margin></Label>
             <HBox alignment="CENTER" prefHeight="27.0" prefWidth="168.0">
                <children>
-                  <Button fx:id="Ja" mnemonicParsing="false" text="Já" />
-                  <Button fx:id="Nei" mnemonicParsing="false" text="Nei" />
+                  <Button fx:id="Ja" mnemonicParsing="false" text="Já">
+                     <HBox.margin>
+                        <Insets right="5.0" />
+                     </HBox.margin></Button>
+                  <Button fx:id="Nei" mnemonicParsing="false" text="Nei">
+                     <HBox.margin>
+                        <Insets left="5.0" />
+                     </HBox.margin></Button>
                </children>
             </HBox>
-            <Label fx:id="L6" text="Leikmaður 6" />
+            <Label fx:id="L6" text="Leikmaður 6">
+               <VBox.margin>
+                  <Insets top="3.0" />
+               </VBox.margin></Label>
             <HBox alignment="CENTER" prefHeight="27.0" prefWidth="168.0">
                <children>
-                  <Button fx:id="Ja" mnemonicParsing="false" text="Já" />
-                  <Button fx:id="Nei" mnemonicParsing="false" text="Nei" />
+                  <Button fx:id="Ja" mnemonicParsing="false" text="Já">
+                     <HBox.margin>
+                        <Insets right="5.0" />
+                     </HBox.margin></Button>
+                  <Button fx:id="Nei" mnemonicParsing="false" text="Nei">
+                     <HBox.margin>
+                        <Insets left="5.0" />
+                     </HBox.margin></Button>
                </children>
             </HBox>
-            <Label fx:id="L7" text="Leikmaður 7" />
+            <Label fx:id="L7" text="Leikmaður 7">
+               <VBox.margin>
+                  <Insets top="3.0" />
+               </VBox.margin></Label>
             <HBox alignment="CENTER" prefHeight="26.0" prefWidth="168.0">
                <children>
-                  <Button fx:id="Ja" mnemonicParsing="false" text="Já" />
-                  <Button fx:id="Nei" mnemonicParsing="false" text="Nei" />
+                  <Button fx:id="Ja" mnemonicParsing="false" text="Já">
+                     <HBox.margin>
+                        <Insets right="5.0" />
+                     </HBox.margin></Button>
+                  <Button fx:id="Nei" mnemonicParsing="false" text="Nei">
+                     <HBox.margin>
+                        <Insets left="5.0" />
+                     </HBox.margin></Button>
                </children>
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
             </HBox>
-            <Label fx:id="L8" text="Leikmaður 8" />
+            <Label fx:id="L8" text="Leikmaður 8">
+               <VBox.margin>
+                  <Insets top="3.0" />
+               </VBox.margin></Label>
             <HBox alignment="CENTER" prefHeight="27.0" prefWidth="168.0">
                <children>
-                  <Button fx:id="Ja" mnemonicParsing="false" text="Já" />
-                  <Button fx:id="Nei" mnemonicParsing="false" text="Nei" />
+                  <Button fx:id="Ja" mnemonicParsing="false" text="Já">
+                     <HBox.margin>
+                        <Insets right="5.0" />
+                     </HBox.margin></Button>
+                  <Button fx:id="Nei" mnemonicParsing="false" text="Nei">
+                     <HBox.margin>
+                        <Insets left="5.0" />
+                     </HBox.margin></Button>
                </children>
             </HBox>
-            <Button fx:id="Draga" mnemonicParsing="false" prefHeight="51.0" prefWidth="167.0" text="Draga Spil" />
+            <Button fx:id="Draga" mnemonicParsing="false" prefHeight="43.0" prefWidth="180.0" text="Draga Spil">
+               <VBox.margin>
+                  <Insets top="5.0" />
+               </VBox.margin>
+               <font>
+                  <Font name="System Bold" size="15.0" />
+               </font></Button>
          </children>
+         <BorderPane.margin>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+         </BorderPane.margin>
       </VBox>
    </right>
 </BorderPane>
