--- a/src/main/resources/hi/is/vidmot/veganifel/main.css
+++ b/src/main/resources/hi/is/vidmot/veganifel/main.css
@@ -1,5 +1,5 @@
 .root{
--fx-background-image: url('../Myndir/Bakrunnur.jpg');
+-fx-background-image: url('../Myndir/BakrunnurM.jpg');
  -fx-background-size: cover;
  -fx-font-size: 14px;
 }
@@ -10,16 +10,16 @@
 }
 #Ja{
 -fx-background-color:#B4CFA2;
--fx-border-color:#4E8215;
--fx-border-width:2.5;
+-fx-border-color:Black;
+-fx-border-width:1.5;
 -fx-border-radius:7;
 -fx-background-radius:8;
 
 }
 #Nei{
 -fx-background-color:#DFCFCD;
--fx-border-color:#C3453D;
--fx-border-width:2.5;
+-fx-border-color:Black;
+-fx-border-width:1.5;
 -fx-border-radius:7;
 -fx-background-radius:8;
 }
