Var að gera Rauð og blá spil

--- a/src/main/resources/hi/is/vidmot/veganifel/main.css
+++ b/src/main/resources/hi/is/vidmot/veganifel/main.css
@@ -34,3 +34,13 @@
 #Vote{
 -fx-background-color:#DFE6E9;
 }
+#Blar{
+-fx-background-image: url('../Myndir/Smidur.jpg');
+    -fx-background-size: contain;
+    -fx-background-position: center;
+}
+#Raudur{
+-fx-background-image: url('../Myndir/Krakkar.jpg');
+    -fx-background-size: contain;
+    -fx-background-position: center;
+}
