--- a/src/main/resources/hi/is/vidmot/veganifel/main.css
+++ b/src/main/resources/hi/is/vidmot/veganifel/main.css
@@ -39,7 +39,7 @@
     -fx-background-size: contain;
     -fx-background-position: center;
 }
-#Raudur{
+#Gaen{
 -fx-background-image: url('../Myndir/Krakkar.jpg');
     -fx-background-size: contain;
     -fx-background-position: center;
