--- a/src/main/resources/hi/is/vidmot/veganifel/hlutverk-view.fxml
+++ b/src/main/resources/hi/is/vidmot/veganifel/hlutverk-view.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:controller="hi.is.vidmot.veganifel.hlutverkController" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label layoutX="222.0" layoutY="14.0" prefHeight="50.0" prefWidth="156.0" text="Vegan í Felum">
          <font>
