Vildi bara koma þessu inn

--- a/src/main/resources/hi/is/vidmot/veganifel/main.css
+++ b/src/main/resources/hi/is/vidmot/veganifel/main.css
@@ -1,5 +1,5 @@
 .root{
--fx-background-image: url('../Myndir/BakrunnurM.jpg');
+-fx-background-image: url('../Myndir/Bord2.jpg');
  -fx-background-size: cover;
  -fx-font-size: 14px;
 }
