er búinn með main nema að ná í leikmenn frá nofnController

--- a/src/main/resources/hi/is/vidmot/veganifel/hlutverk-view.fxml
+++ b/src/main/resources/hi/is/vidmot/veganifel/hlutverk-view.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<VBox fx:id="bakrunnur" alignment="TOP_RIGHT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="870.0" stylesheets="@ingangur.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hi.is.vidmot.veganifel.hlutverkController">
+<VBox fx:controller="hi.is.vidmot.veganifel.hlutverkController" fx:id="bakrunnur" alignment="TOP_RIGHT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="870.0" stylesheets="@ingangur.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" >
    <children>
       <MenuBar prefHeight="18.0" prefWidth="600.0">
         <menus>
