--- a/src/main/resources/hi/is/vidmot/veganifel/Shlutverk-view.fxml
+++ b/src/main/resources/hi/is/vidmot/veganifel/Shlutverk-view.fxml
@@ -13,7 +13,7 @@
               <menus>
                 <Menu mnemonicParsing="false" text="Hjálp">
                   <items>
-                    <MenuItem mnemonicParsing="false" text="Close" />
+                    <MenuItem mnemonicParsing="false" onAction="#reglurnar" text="Reglur" />
                   </items>
                 </Menu>
               </menus>
