--- a/src/main/resources/hi/is/vidmot/veganifel/nofn-view.fxml
+++ b/src/main/resources/hi/is/vidmot/veganifel/nofn-view.fxml
@@ -11,7 +11,7 @@
         <menus>
           <Menu mnemonicParsing="false" text="Hjálp">
             <items>
-              <MenuItem mnemonicParsing="false" text="Close" />
+              <MenuItem mnemonicParsing="false" onAction="#reglurnar" text="Reglur" />
             </items>
           </Menu>
         </menus>
