--- a/src/main/resources/hi/is/vidmot/veganifel/ritari-view.fxml
+++ b/src/main/resources/hi/is/vidmot/veganifel/ritari-view.fxml
@@ -47,12 +47,12 @@
                     <children>
                         <ImageView fitHeight="300.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
                             <image>
-                                <Image url="@../Myndir/Smidur.jpg" />
+                                <Image url="@../Myndir/Spil/Smidur.jpg" />
                             </image>
                         </ImageView>
                         <ImageView fitHeight="300.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1">
                             <image>
-                                <Image url="@../Myndir/Krakkar.jpg" />
+                                <Image url="@../Myndir/Spil/Krakkar.jpg" />
                             </image>
                         </ImageView>
                         <Button mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" text="Velja" GridPane.rowIndex="1" />
