--- a/src/main/resources/hi/is/vidmot/veganifel/verkefnastjori-view.fxml
+++ b/src/main/resources/hi/is/vidmot/veganifel/verkefnastjori-view.fxml
@@ -19,9 +19,9 @@
       </MenuBar>
    </top>
    <center>
-      <VBox alignment="TOP_CENTER" BorderPane.alignment="CENTER">
+      <VBox fx:id="fxerkefnastjori" alignment="TOP_CENTER" BorderPane.alignment="CENTER">
          <children>
-            <Label alignment="CENTER" prefHeight="44.0" prefWidth="484.0" text="Veldu spil sem þú villt ekki gefa ritaranum þínum">
+            <Label fx:id="fxbreytaTexta" alignment="CENTER" prefHeight="44.0" prefWidth="484.0" text="Veldu spil sem þú villt ekki gefa ritaranum þínum">
                <font>
                   <Font size="21.0" />
                </font>
@@ -39,22 +39,22 @@
                <children>
                   <ImageView fitHeight="300.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../Myndir/Krakkar.jpg" />
+                        <Image url="@../Myndir/Spil/Krakkar.jpg" />
                      </image>
                   </ImageView>
                   <ImageView fitHeight="300.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1">
                      <image>
-                        <Image url="@../Myndir/Smidur.jpg" />
+                        <Image url="@../Myndir/Spil/Smidur.jpg" />
                      </image>
                   </ImageView>
                   <ImageView fitHeight="300.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2">
                      <image>
-                        <Image url="@../Myndir/Krakkar.jpg" />
+                        <Image url="@../Myndir/Spil/Krakkar.jpg" />
                      </image>
                   </ImageView>
-                  <Button mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" text="Velja" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <Button mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" text="Velja" GridPane.rowIndex="1" />
-                  <Button mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" text="Velja" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                  <Button mnemonicParsing="false" onMouseClicked="#veljaSpil" prefHeight="50.0" prefWidth="100.0" text="Velja" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <Button mnemonicParsing="false" onMouseClicked="#veljaSpil" prefHeight="50.0" prefWidth="100.0" text="Velja" GridPane.rowIndex="1" />
+                  <Button mnemonicParsing="false" onMouseClicked="#veljaSpil" prefHeight="50.0" prefWidth="100.0" text="Velja" GridPane.columnIndex="2" GridPane.rowIndex="1" />
                </children>
             </GridPane>
          </children>
