--- a/src/main/resources/hi/is/vidmot/veganifel/ingangur.css
+++ b/src/main/resources/hi/is/vidmot/veganifel/ingangur.css
@@ -1,6 +1,6 @@
 .root{
 -fx-background-color:#DFE6E9;
- -fx-background-size: cover;;
+ -fx-background-size: cover;
 }
 #Hlutverk .button{
     -fx-padding: 10px;
