--- a/src/main/resources/hi/is/vidmot/veganifel/verkefnastjori-view.fxml
+++ b/src/main/resources/hi/is/vidmot/veganifel/verkefnastjori-view.fxml
@@ -37,7 +37,7 @@
                   <Font size="15.0" />
                </font>
             </Label>
-            <HBox fx:id="fxSpilaListi" alignment="CENTER" prefHeight="456.0" prefWidth="870.0">
+            <HBox fx:id="fxSpilaListi" alignment="CENTER" prefHeight="450.0" prefWidth="870.0" spacing="10">
                <VBox.margin>
                   <Insets />
                </VBox.margin></HBox>
